build: upgrade Java from 11 to 17 and update maven compiler plugin